2022: Add day 6,7,8 and 9 solutions